Explicitly clear p_md.md_flags for newer binaries. Fixes PR port-hppa/48755. OK: skrll